--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Ari Afianto</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ari Afianto</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Design Grafis, Freelancer,"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -94,8 +94,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desain Grafis &amp; Digital Marketing.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Halo! Saya Ari Afianto, seorang desainer grafis dan digital marketing dengan minat mendalam dalam menciptakan solusi visual yang menarik dan efektif. Dengan pengalaman lebih dari 2020 tahun di industri ini, saya telah bekerja dengan berbagai klien dari berbagai industri untuk membantu mereka mencapai tujuan mereka melalui desain kreatif dan strategi pemasaran yang kuat.
             </p>
             <div class="row">
               <div class="col-lg-6">
